--- a/data/index.html
+++ b/data/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP32 Web Server</title>
+  <title>Mission Control Center</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>ESP32 Web Server</h1>
-  <p>GPIO state: <strong> %STATE%</strong></p>
-  <p><a href="/on"><button class="button">ON</button></a></p>
-  <p><a href="/off"><button class="button button2">OFF</button></a></p>
+  <h1>Mission Control Center</h1>
+  <!-- <p>GPIO state: <strong> %STATE%</strong></p> -->
+  <p><a href="/start"><button class="button">Start Countdown.</button></a></p>
+  <p><a href="/stop"><button class="button button2">Stop Countdown.</button></a></p>
 </body>
 </html>
