--- a/data/index.html
+++ b/data/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Mission Control Center</h1>
   <!-- <p>GPIO state: <strong> %STATE%</strong></p> -->
-  <p><a href="/start"><button class="button">Start Countdown.</button></a></p>
+  <p><a href="/on"><button class="button">Start Countdown.</button></a></p>
   <p><a href="/stop"><button class="button button2">Stop Countdown.</button></a></p>
 </body>
 </html>
