--- a/data/index.html
+++ b/data/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Mission Control Center</h1>
   <!-- <p>GPIO state: <strong> %STATE%</strong></p> -->
-  <p><a href="/startcountdown"><button class="button">Start Countdown.</button></a></p>
-  <p><a href="/stopcountdown"><button class="button button2">Stop Countdown.</button></a></p>
+  <p><a href="/startcountdown"><button class="button">Start Countdown</button></a></p>
+  <p><a href="/reset"><button class="button button2">Reset</button></a></p>
 </body>
 </html>
