modify html css files

--- a/data/index.html
+++ b/data/index.html
@@ -45,7 +45,7 @@
     <p><a href="/startcountdown"><button id="button01" class="button">Start</button></a></p>
     <p><a href="/reset"><button id="button02" class="button button2">Reset</button></a></p>
 
-    <p><div style="font-size: 240px; font-family:'HiraKakuProN-W6';" id="countdown"></div></p>
+    <p><div style="font-size: 240px; font-family:'HiraKakuProN-W6'; color:whitesmoke;" id="countdown"></div></p>
     
 </body>
 </html>
