add setting function

--- a/data/index.html
+++ b/data/index.html
@@ -4,7 +4,8 @@
     <title>Rocket Controller</title>
     <link rel="icon" href="./favicon.ico">
     <link type="text/css" rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta http-equiv="content-type" charset="utf-8">    
 
     <script type="text/javascript">
       function ge(s){ return document.getElementById(s);}
@@ -42,9 +43,15 @@
     <body id="body" onload="onBodyLoad()"> 
     <h1>Rocket Controller</h1>
     <hr>
-    <p><a href="/startcountdown"><button id="button01" class="button">Start</button></a></p>
-    <p><a href="/reset"><button id="button02" class="button button2">Reset</button></a></p>
-
+    <p>
+      <a href="/start"><button id="button01" class="button">Start</button></a>
+    </p>
+    <p>
+      <a href="/reset"><button id="button02" class="button button2">Reset</button></a>
+    </p>
+    <p>
+      <a href="/settings"><botton id="button03" class="button button3">Setting</botton></a>
+    </p>
     <p><div style="font-size: 240px; font-family:'HiraKakuProN-W6'; color:whitesmoke;" id="countdown"></div></p>
     
 </body>
