--- a/data/settings.html
+++ b/data/settings.html
@@ -7,41 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <meta http-equiv="content-type" charset="utf-8">    
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./jquery-3.5.1.slim.min.js"></script>
 
     <script type="text/javascript">
 
-          function doPost(url, data) {
-            console.log(url);
-            var xhr = new XMLHttpRequest();
-            xhr.open("POST", url);
-            xhr.setRequestHeader("Content-Type", "application/json");
-            xhr.onload = () => {
-              console.log(xhr.status);
-              console.log("success!");
-            };
-            xhr.onerror = () => {
-              console.log(xhr.status);
-              console.log("error!");
-            };
-            xhr.send(data);
-          }
+      function doPost(url, data) {
+        console.log(url);
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", url);
+        xhr.setRequestHeader("Content-Type", "application/json");
+        xhr.onload = () => {
+          console.log(xhr.status);
+          console.log("success!");
+        };
+        xhr.onerror = () => {
+          console.log(xhr.status);
+          console.log("error!");
+        };
+        xhr.send(data);
+      }
 
-          $(function(){
+      $(function(){
 
-            $("#SUBMIT_SETTING").click( function(){
-                var url = "http://esp32.local/";
-    
-                var JSONdata = {
-                    SPERK_TIME: parseInt($("#SPERK_TIME").val()),
-                    RELEASE_TIME: parseInt($("#RELEASE_TIME").val())      
-                };
+        $("#SUBMIT_SETTING").click( function(){
+          var url = "http://"+document.location.host+"/";
+          var JSONdata = {
+            SPERK_TIME: parseInt($("#SPERK_TIME").val()),
+            RELEASE_TIME: parseInt($("#RELEASE_TIME").val())      
+          };
 
-                doPost(url, JSON.stringify(JSONdata));
+          doPost(url, JSON.stringify(JSONdata));
+        })
+      })
 
-              })
-          })
     </script>
+
     </head>
     <body id="body"> 
     <h1>Settings</h1>
@@ -49,10 +49,10 @@
     <p>
       <table>
         <tr>
-          <td>放電時間(ms)：</td><td><input type="number" id="SPERK_TIME" name="SPERK_TIME" value="50" /></td>
+          <td>放電時間(ms)：</td><td><input type="number" id="SPERK_TIME" name="SPERK_TIME" value="%SPERK_TIME%" /></td>
         </tr>
         <tr>
-          <td>リリース時間(ms)：</td><td><input type="number" id="RELEASE_TIME" name="RELEASE_TIME" value="10" /></td>
+          <td>リリース時間(ms)：</td><td><input type="number" id="RELEASE_TIME" name="RELEASE_TIME" value="%RELEASE_TIME%" /><td>
         </tr>
       </table>
       <a href="/"><button id="SUBMIT_SETTING" class="button button3">設定</button></a>
