--- a/data/index.html
+++ b/data/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Rocket Controller</title>
-    <link rel="icon" href="./favicon.ico">
-    <link type="text/css" rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="favicon.ico">
+    <link type="text/css" rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <meta http-equiv="content-type" charset="utf-8">    
 
@@ -43,14 +43,12 @@
     <body id="body" onload="onBodyLoad()"> 
     <h1>Rocket Controller</h1>
     <hr>
-    <p>
-      <a href="/start"><button id="button01" class="button">Start</button></a>
-      <a href="/reset"><button id="button02" class="button button2">Reset</button></a>
-    </p>
-    <p>
-      <a href="/settings"><botton id="button03" class="button button3">Setting</botton></a>
-    </p>
-    <p><div style="font-size: 240px; font-family:'HiraKakuProN-W6'; color:whitesmoke;" id="countdown"></div></p>
-    
+    <p></p>
+    <a href="/start"><button id="button01" class="button">Start</button></a>
+    <a href="/reset"><button id="button02" class="button button2">Reset</button></a>
+    <p></p>
+    <a href="/settings"><botton id="button03" class="button button3">Setting</botton></a>
+
+    <div style="font-size: 240px; font-family:'HiraKakuProN-W6'; color:whitesmoke;" id="countdown"></div>
 </body>
 </html>
