change jquery ver

--- a/data/index.html
+++ b/data/index.html
@@ -46,13 +46,11 @@
   <h1>Rocket Controller</h1>
   <hr>
   <p></p>
-  <a href="/start"><button id="button01" class="button">Start</button></a>
-  <a href="/reset"><button id="button02" class="button button2">Reset</button></a>
+  <button onclick="location.href='/start'" id="button01" class="btn1 btn2">Start</button>
+  <button onclick="location.href='/reset'" id="button02" class="btn1">Reset</button>
   <p></p>
-  <a href="/settings">
-    <botton id="button03" class="button button3">Settings</botton>
-  </a>
-
+  <botton onclick="location.href='/settings'" id="button03" class="btn1 btn3">Settings</botton>
+  <p></p>
   <div class="countNumber" id="countdown"></div>
   <hr>
 </body>
