--- a/data/settings.html
+++ b/data/settings.html
@@ -11,7 +11,6 @@
   <script type="text/javascript" src="jquery-3.5.1.slim.min.js"></script>
 
   <script type="text/javascript">
-
     function doPost(url, data) {
       console.log(url);
       var xhr = new XMLHttpRequest();
@@ -28,18 +27,22 @@
       xhr.send(data);
     }
 
-    $(document).on('touchstart touchend', '#SUBMIT_SETTING', function () {
-
+    $(document).on('touchstart touchend', '#SUBMIT, #STA_MODE, #AP_MODE', function () {
       var url = "http://" + document.location.host + "/";
+
+      var sID = $(this).attr('id');
+
       var JSONdata = {
-        SPERK_TIME: parseInt($("#SPERK_TIME").val()),
-        RELEASE_TIME: parseInt($("#RELEASE_TIME").val())
+        MODE: sID,
+        SPERK_TIME: parseInt($('#SPERK_TIME').val()),
+        RELEASE_TIME: parseInt($('#RELEASE_TIME').val())
       };
+
+      console.log(JSONdata);
 
       doPost(url, JSON.stringify(JSONdata));
 
     })
-
   </script>
 
 </head>
@@ -63,11 +66,11 @@
   </table>
   <p></p>
   <div class="container">
-  <button onclick="location.href='/'" id="SUBMIT_SETTING" class="btn1 btn3">Set value</button>
-  <p></p>
-  <button onclick="location.href='/STAmode'" id="STA" class="btn1 btn3">Start Config Portal</button>
-  <p></p>
-  <button onclick="location.href='/APmode'" id="AP" class="btn1 btn3">Start AP mode</button>
+    <button onclick="location.href='/'" id="SUBMIT" class="btn1 btn3">Set value</button>
+    <p></p>
+    <button onclick="location.href='/'" id="STA_MODE" class="btn1 btn3">Start STA mode</button>
+    <p></p>
+    <button onclick="location.href='/'" id="AP_MODE" class="btn1 btn3">Start AP mode</button>
   </div>
   <hr>
 </body>
