--- a/data/index.html
+++ b/data/index.html
@@ -45,7 +45,8 @@
 <body id="body" onload="onBodyLoad()">
   <h1>Rocket Controller</h1>
   <hr>
-  <p></p>
+  Sperking Time : %SPERK_TIME% (ms)<br>
+  Relese Time : %RELEASE_TIME% (ms)<br>
   <button onclick="location.href='/start'" id="button01" class="btn1 btn2">Start</button>
   <button onclick="location.href='/reset'" id="button02" class="btn1">Reset</button>
   <p></p>
